# General-Ledger

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
docs/: architecture.md  development-rules.md  mvp-requirements.md  release-v0.5.0.md  test-v0.5.0-subcategories.md
expense-tracker-qt/: CMakeLists.txt  Main.qml  README.md  main.cpp
expense-tracker-qt/docs/: v0.2.0-search-filter-plan.md
expense-tracker-qt/qml/components/: BarChart.qml  CategoryItem.qml  CategoryOption.qml  FormField.qml  PieChart.qml  TypeOption.qml
expense-tracker-qt/qml/pages/: AddTransactionPage.qml  CategoryManagePage.qml  CategorySummaryPage.qml  ChartPage.qml  EditTransactionPage.qml  HomePage.qml  SettingsPage.qml  SubcategoryManagePage.qml  TransactionListPage.qml  WeeklyBudgetPage.qml
expense-tracker-qt/src/: AppController.cpp  AppController.h
expense-tracker-qt/src/database/: DatabaseManager.cpp  DatabaseManager.h
expense-tracker-qt/src/models/: Category.cpp  Category.h  CategoryListModel.cpp  CategoryListModel.h  Subcategory.cpp  Subcategory.h  SubcategoryListModel.cpp  SubcategoryListModel.h  Transaction.cpp  Transaction.h  TransactionFilter.cpp  TransactionFilter.h  TransactionListModel.cpp  TransactionListModel.h  WeeklyBudget.cpp  WeeklyBudget.h  WeeklyBudgetComparison.cpp  WeeklyBudgetComparison.h  WeeklyBudgetListModel.cpp  WeeklyBudgetListModel.h
expense-tracker-qt/src/repositories/: CategoryRepository.cpp  CategoryRepository.h  SubcategoryRepository.cpp  SubcategoryRepository.h  TransactionRepository.cpp  TransactionRepository.h  WeeklyBudgetRepository.cpp  WeeklyBudgetRepository.h
expense-tracker-qt/src/services/: CategorySummaryService.cpp  CategorySummaryService.h  ChartDataService.cpp  ChartDataService.h  CsvExportService.cpp  CsvExportService.h  SummaryService.cpp  SummaryService.h  WeeklyBudgetService.cpp  WeeklyBudgetService.h
expense-tracker-qt/src/utils/: WeekUtils.cpp  WeekUtils.h
